--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "compile": "tsc -w",
     "start": "webpack-dev-server --open"
   },
   "keywords": [],
@@ -16,19 +17,30 @@
     "@meeco/style-kit": "0.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.5.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tslib": "^2.0.1",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "chai": "^4.2.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "dotenv-webpack": "^2.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.4.1",
+    "mocha": "^8.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
     "webpack": "^4.44.0",
     "webpack-dev-server": "^3.11.0"
