--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
         "noImplicitAny": false,
         "module": "commonjs",
         "target": "es5",
-        "allowJs": true
+        "allowJs": true,
+        "jsx": "react",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
     }
 }
