--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@meeco/cryppo": "^0.6.2",
     "@meeco/sdk": "0.0.11-beta",
     "@meeco/style-kit": "0.0.2",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.5.0",
     "react": "^16.13.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
+    "@types/classnames": "^2.2.10",
     "@types/mocha": "^8.0.3",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
